# Funcy-Compiler

./: .gitignore  LICENSE  README.md  funcy-compiler.cabal  hie.yaml  package.yaml
funcy-compiler/: .gitignore  ChangeLog.md  README.md  package.yaml
funcy-compiler/app/: Main.hs
funcy-compiler/src/Funcy/Processing/: AST.hs  Analysis.hs  Modules.hs  Values.hs
src/Funcy/Base/: AST.hs  Message.hs  Modules.hs  Recursive.hs  Report.hs  Util.hs
src/Funcy/Processing/: AST.hs  Analysis.hs  Message.hs  Modules.hs  Refers.hs  Structure.hs  TypeSystem.hs  Typing.hs  Util.hs  Values.hs
src/Funcy/Reference/: Classes.hs  Process.hs  Refers.hs
src/Funcy/Structure/: Structure.hs
src/Funcy/Typing/: Infers.hs  Process.hs  Structure.hs
