cabal-version: 1.12

name:           funcy-compiler
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Abastro/Funcy-Compiler#readme>
homepage:       https://github.com/Abastro/Funcy-Compiler#readme
bug-reports:    https://github.com/Abastro/Funcy-Compiler/issues
author:         Abastro
maintainer:     abab9579@gmail.com
copyright:      2020 Abastro
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Abastro/Funcy-Compiler

library
  exposed-modules:
      Funcy.Base.AST
      Funcy.Base.Message
      Funcy.Base.Modules
      Funcy.Base.Recursive
      Funcy.Base.Report
      Funcy.Base.Util
      Funcy.Reference.Process
      Funcy.Reference.Refers
      Funcy.Structure.Structure
      Funcy.Typing.Infers
      Funcy.Typing.Process
  other-modules:
      Paths_funcy_compiler
  hs-source-dirs:
      src
  default-extensions:
      FlexibleContexts
      FlexibleInstances
      MultiParamTypeClasses
      DataKinds
      ConstraintKinds
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      TypeApplications
      TupleSections
  build-depends:
      array ==0.5.*
    , base >=4.7 && <5
    , containers ==0.6.*
    , generic-deriving >=1.11 && <1.14
    , lens ==4.19.*
    , transformers == 0.5.*
    , mtl ==2.2.*
  default-language: Haskell2010

executable funcy-compiler-exe
  main-is: Main.hs
  other-modules:
      Paths_funcy_compiler
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , funcy-compiler
  default-language: Haskell2010

test-suite funcy-compiler-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_funcy_compiler
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , funcy-compiler
  default-language: Haskell2010
